# repo-mcp-packager

./: .gitignore  AI-SDK-PROD-BUILD-v5.md  ARCHITECTURE.md  AUDIT_REPORT.md  App.tsx  CHANGELOG.md  COMMAND.md  COMMANDS.md  CONTRIBUTING.md  ENVIRONMENT.md  EVIDENCE.md  FEATURES.md  LICENSE  MCP_MANUAL_CONFIG.md  NEXUS_GUIDE.md  NEXUS_TECHNICAL_SPEC.md  README.md  USER_OUTCOMES.md  agg_red_team_all.py  bootstrap.py  gui_bridge.py  install.sh  nexus_devlog.py  nexus_session_logger.py  pyproject.toml  start_gui.sh  uninstall.py
.librarian/: manifest.json
commands/mac-unix/: install-suite.command  repair-install.command  sync-updates.command
forge/: forge_engine.py  mcp-forge.py
gui/: USER_OUTCOMES.md  app.js  index.html  server.py  styles.css  widgets.json
serverinstaller/: AI-SDK-PROD-BUILD-v1.md  ARCHITECTURE.md  CHANGELOG.md  ENVIRONMENT.md  README.md  USER_OUTCOMES.md  attach.py  install.py  uninstall.py  verify.py
tests/: test_cli_smoke.py  test_command_matrix_coverage.py  test_commands_flags_exist.py  test_devlog_capture.py  test_gui_daemon_support.py  test_inject_ping_roundtrip.py  test_install_manifest_serialization.py  test_install_prompt_abort.py  test_install_state.py  test_knowledge_server_template.py  test_malformed_config_recovery.py  test_ort_repair_rollback.py  test_resilience.py  test_suite_index_prereqs.py  test_uat_playbook.py  test_uninstall_central_only.py  test_uninstall_entrypoint.py  test_uninstall_env_only.py  test_uninstall_path_block.py  test_uninstall_process_termination.py  test_user_wrappers.py  verify_repair_action.py
(+3 files in other folders)
